--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
+    <style media="screen">
+      body {
+        background-color : dodgerblue;
+        font-family: Helvetica, Arial, sans-serif;
+      }
+    </style>
   </head>
   <body>
       <div class="container">
