width only when

--- a/floats.html
+++ b/floats.html
@@ -12,7 +12,6 @@
     }
 
     .container {
-      width : 75%;
       margin : auto;
     }
 
@@ -55,6 +54,13 @@
       content: "";
       clear: both;
       display: table;
+    }
+
+    @media (min-width: 768px) {
+      .container {
+        width : 75%;
+
+      }
     }
 
     </style>
